change articleModel date field

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,4 +5,11 @@ week = week
 day=day
 hour=hour
 minute=minute
-second=second
+second=secondago
+years=years
+months = months
+weeks = weeks
+days=days
+hours=hours
+minutes=minutes
+seconds=seconds
