--- a/src/main/resources/messages_az.properties
+++ b/src/main/resources/messages_az.properties
@@ -13,4 +13,5 @@ days=gün
 hours=saat
 minutes=dəqiqə
 seconds=saniyyə
-just_now=indic?
+just_now=indicə
+operation_limit_exceed=Gün ərzindəki əməliyyat limitini keçmisiniz.
