add translation to exception handling

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,11 +14,6 @@ hours=hours
 minutes=minutes
 seconds=seconds
 just_now=just now
-ADD_POST_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_COMMENT_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_VOTE_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_TOPIC_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_THREAD_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_ROOMMATE_LIMIT_ERROR=You have exceeded the daily posting limit.
-ADD_TEXTBOOK_LIMIT=You have exceeded the daily posting limit.
-ADD_ARTICLE_LIMIT_ERROR=You have exceeded the daily posting limit.
+operation_limit_error=You have exceeded the daily operation limit.
+page_not_found=Page not found
+authorization_error=You don't have permission for this action.
