--- a/src/main/resources/messages_az.properties
+++ b/src/main/resources/messages_az.properties
@@ -14,4 +14,6 @@ hours=saat
 minutes=dəqiqə
 seconds=saniyyə
 just_now=indicə
-operation_limit_exceed=Gün ərzindəki əməliyyat limitini keçmisiniz.
+operation_limit_error=Gün ərzindəki əməliyyat limitini keçmisiniz.
+page_not_found=Səhifə tapılmadı.
+authorization_error=Bu əməliyyat üçün icazəniz yoxdur.
